// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Image Component Should to render the component correctly with the custom image 1`] = `
<img
  alt="coffee mug"
  className="productImg undefined"
  src="./coffee-mug.png"
/>
`;

exports[`Product Image Component Should to show the  component with the product's image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="coffee mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
